# baloo

./: Cargo.toml  README.md
src/: data_structures.rs  error.rs  kzg.rs  lib.rs  pairings.rs  precomputed.rs  prover.rs  utils.rs  verifier.rs
src/fast_eval/: mod.rs
src/subprotocols/: caulk_plus_core.rs  generalized_inner_product.rs  mod.rs  prepare_subvector.rs  subvector.rs  well_formation.rs
