[package]
name = "baloo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = "0.3.0"
ark-std = "0.3.0"
fast-eval = { git = "ssh://git@github.com/geometryresearch/fast-eval.git" }


[dev-dependencies]
ark-bn254 = "0.3.0"